# interview_questions

apc_netherlands/Hoppers/: CMakeLists.txt  main.cpp
apc_netherlands/Hoppers/solution/: solution.cpp  solution.hpp
apc_netherlands/The-sawmills-in-LEGO-land/: CMakeLists.txt  main.cpp
apc_netherlands/The-sawmills-in-LEGO-land/solution/: solution.cpp  solution.hpp
leetcode/: palindromic_substring.h
nokia/: CMakeLists.txt  main.cpp
nokia/headers/: max_depth_of_the_tree.h  min_and_max_numbers.h  number_of_words_of_each_length.h  prime_numbers.h  remove_every_fifth_element.h
nokia/test_headers/: max_depth_of_the_tree_test.h  min_and_max_numbers_test.h  number_of_words_of_each_length_test.h  prime_numbers_test.h  remove_every_fifth_element_test.h
yandex/: anagrams.h  consecutive_numbers.h  generate_parentheses.h  interesting_travel.h  remove_duplicates.h  stones_and_jewels.h
